--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@equt/fetch",
-  "version": "3.4.0",
+  "version": "3.5.0",
   "license": "MIT",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -26,47 +26,45 @@
     "LICENSE.md",
     "dist"
   ],
-  "packageManager": "pnpm@7.1.8",
   "sideEffects": false,
   "scripts": {
     "prepare": "husky install",
     "build": "unbuild",
     "lint": "eslint .",
-    "spell": "cspell '*.json' README.md '**/*.ts'",
     "format": "prettier --check 'src/*.ts' README.md",
     "test": "jest --coverage",
-    "check": "tsc",
-    "doc": "docs-ts"
+    "check": "tsc"
+  },
+  "dependencies": {
+    "fp-ts": "^2.13.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@equt/eslint-config": "^8.9.0",
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
+    "@equt/eslint-config": "^9.0.1",
     "@equt/prettier-config": "^2.5.1",
     "@equt/tsconfig": "^1.3.1",
-    "@types/jest": "^29.4.0",
-    "cross-fetch": "^3.1.5",
-    "cspell": "^6.19.2",
-    "docs-ts": "^0.7.0",
-    "eslint": "^8.33.0",
-    "fetch-mock-jest": "^1.5.1",
-    "fp-ts": "2.13.1",
+    "@types/jest": "^29.5.0",
+    "cspell": "^6.31.1",
+    "eslint": "^8.38.0",
     "husky": "^8.0.3",
     "io-ts": "^2.2.20",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "pnpm": "^7.26.2",
-    "prettier": "^2.8.3",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5",
-    "unbuild": "^1.1.1"
+    "jest": "^29.5.0",
+    "prettier": "^2.8.7",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4",
+    "unbuild": "^1.2.1",
+    "zod": "^3.21.4"
   },
   "peerDependencies": {
-    "fp-ts": ">=2.11.1",
-    "io-ts": ">=2.2.8"
+    "io-ts": ">=2.2.8",
+    "zod": "^3.21.4"
   },
   "peerDependenciesMeta": {
     "io-ts": {
+      "optional": true
+    },
+    "zod": {
       "optional": true
     }
   },
@@ -79,8 +77,7 @@
     "coverage"
   ],
   "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "jsdom"
+    "preset": "ts-jest"
   },
   "unbuild": {
     "entries": [
@@ -91,39 +88,6 @@
     "rollup": {
       "emitCJS": true
     }
-  },
-  "cspell": {
-    "words": [
-      "MPTL",
-      "abortable",
-      "appy",
-      "codecov",
-      "combinator",
-      "combinators",
-      "commitlint",
-      "contactlab",
-      "contactlabappy",
-      "equt",
-      "failable",
-      "fetchm",
-      "lazyable",
-      "maperror",
-      "miliseconds",
-      "orio",
-      "pnpm",
-      "postpublish",
-      "runfetchm",
-      "runfetchmflipped",
-      "runfetchmflippedp",
-      "runfetchmflippedpt",
-      "runfetchmp",
-      "runfetchmpt",
-      "tsbuildinfo",
-      "tupled",
-      "typecheck",
-      "withjson",
-      "withjsonbody"
-    ]
   },
   "commitlint": {
     "extends": [
