--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "types": "./src/index.ts",
   "homepage": "https://github.com/equt/fetch",
   "type": "module",
   "exports": {
@@ -25,19 +25,17 @@
   "files": [
     "README.md",
     "LICENSE.md",
-    "dist"
+    "dist",
+    "src"
   ],
   "sideEffects": false,
   "scripts": {
     "prepare": "husky install",
-    "build": "unbuild",
+    "build": "esbuild --bundle --format=esm --outfile=dist/index.mjs src/index.ts & esbuild --bundle --format=cjs --outfile=dist/index.cjs src/index.ts & wait",
     "lint": "eslint .",
     "format": "prettier --check 'src/*.ts' README.md",
     "test": "jest --coverage",
     "check": "tsc"
-  },
-  "dependencies": {
-    "fp-ts": "^2.13.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
@@ -47,14 +45,15 @@
     "@equt/tsconfig": "^1.3.1",
     "@types/jest": "^29.5.0",
     "cspell": "^6.31.1",
+    "esbuild": "^0.17.17",
     "eslint": "^8.38.0",
+    "fp-ts": "^2.13.1",
     "husky": "^8.0.3",
     "io-ts": "^2.2.20",
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4",
-    "unbuild": "^1.2.1",
     "zod": "^3.21.4"
   },
   "peerDependencies": {
@@ -79,16 +78,6 @@
   ],
   "jest": {
     "preset": "ts-jest"
-  },
-  "unbuild": {
-    "entries": [
-      "src/index"
-    ],
-    "clean": true,
-    "declaration": true,
-    "rollup": {
-      "emitCJS": true
-    }
   },
   "commitlint": {
     "extends": [
