--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@equt/fetch",
-  "version": "4.3.0",
+  "version": "4.4.0",
   "license": "MIT",
   "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./src/index.ts",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "homepage": "https://github.com/equt/fetch",
   "type": "module",
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
@@ -31,7 +31,7 @@
   "sideEffects": false,
   "scripts": {
     "prepare": "husky install",
-    "build": "esbuild --bundle --format=esm --outfile=dist/index.mjs src/index.ts & esbuild --bundle --format=cjs --outfile=dist/index.cjs src/index.ts & wait",
+    "build": "tsup src/index.ts --format esm,cjs --dts",
     "lint": "eslint .",
     "format": "prettier --check 'src/*.ts' README.md",
     "test": "jest --coverage",
@@ -44,14 +44,13 @@
     "@equt/prettier-config": "^2.5.1",
     "@equt/tsconfig": "^1.3.1",
     "@types/jest": "^29.5.0",
-    "esbuild": "^0.17.17",
     "eslint": "^8.38.0",
-    "fp-ts": "^2.13.1",
     "husky": "^8.0.3",
     "io-ts": "^2.2.20",
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.4",
     "zod": "^3.21.4"
   },
@@ -82,5 +81,8 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
+  },
+  "dependencies": {
+    "fp-ts": "^2.13.1"
   }
 }
