--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@equt/fetch",
-  "version": "4.4.0",
+  "version": "4.5.0",
   "license": "MIT",
   "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "homepage": "https://github.com/equt/fetch",
   "type": "module",
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
-      "import": "./dist/index.js",
+      "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -31,7 +31,7 @@
   "sideEffects": false,
   "scripts": {
     "prepare": "husky install",
-    "build": "tsup src/index.ts --format esm,cjs --dts",
+    "build": "unbuild",
     "lint": "eslint .",
     "format": "prettier --check 'src/*.ts' README.md",
     "test": "jest --coverage",
@@ -45,16 +45,18 @@
     "@equt/tsconfig": "^1.3.1",
     "@types/jest": "^29.5.0",
     "eslint": "^8.38.0",
+    "fp-ts": ">=2.11",
     "husky": "^8.0.3",
     "io-ts": "^2.2.20",
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
-    "tsup": "^6.7.0",
     "typescript": "^5.0.4",
+    "unbuild": "^1.2.1",
     "zod": "^3.21.4"
   },
   "peerDependencies": {
+    "fp-ts": ">=2.11",
     "io-ts": ">=2.2.8",
     "zod": "^3.21.4"
   },
@@ -82,7 +84,14 @@
       "@commitlint/config-conventional"
     ]
   },
-  "dependencies": {
-    "fp-ts": "^2.13.1"
+  "unbuild": {
+    "entries": [
+      "src/index"
+    ],
+    "clean": true,
+    "declaration": true,
+    "rollup": {
+      "emitCJS": true
+    }
   }
 }
